apps/lbsvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  namespace: devproject
  labels: #to map it with the service
    app: web
    env: dev
spec:
  containers:
    - name: webcon
      image: sudarshanlnx/farmfresh:v1
      imagePullPolicy: Always
      ports:
        - containerPort: 80
          name: apache
          protocol: TCP
      resources:
        requests:
          memory: "200Mi"
          cpu: "200m"
        limits:
          memory: "300Mi"
          cpu: "400m"

---
apiVersion: v1
kind: Service
metadata:
  name: lbsvc   #service name (it can be any name)
  namespace: devproject
spec:
  type: LoadBalancer
  ports:
    - name: apache
      port: 80 #service port
      targetPort: 80 #container port
      protocol: TCP
  selector:     #mapping to pod
    app: web
    env: dev
