apps/onlydeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeployment
  namespace: devproject
spec:
  replicas: 2
  selector:
    matchLabels:
      apptype: web
      env: dev
  template:
    metadata:
      name: webtemp
      labels:
        apptype: web
        env: dev
    spec:
      containers:
        - image: scorpneedhi/springapp:v1
          name: webcon
          imagePullPolicy: Always
          ports:
            -  name: apache
               containerPort: 8080
               protocol: TCP
          resources:
            requests:
              memory: "40Mi"
              cpu: "40m"
            limits:
              memory: "50Mi"
              cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: websvc   #service name (it can be any name)
  namespace: devproject
spec:
  ports:
    - name: apache
      port: 80 #service port
      targetPort: 8080 #container port
      protocol: TCP
  selector:     #mapping to pod
    apptype: web
    env: dev
