apps/hpaweb.yaml
#To create the autoscaling first create the metrics server to get the POD metrics
#kubectl.exe apply -f https://github.com/kubernetes-sigs/metrics-server/releases/latest/download/components.yaml
#kubectl.exe get pod -n kube-system
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeployment
  namespace: devproject
spec:
  replicas: 1
  selector:
    matchLabels:
      apptype: web
      env: dev
  template:
    metadata:
      name: webtemp
      labels:
        apptype: web
        env: dev
    spec:
      containers:
        - image: scorpneedhi/springapp:v1
          name: webcon
          imagePullPolicy: Always
          ports:
            -  name: apache
               containerPort: 8080
               protocol: TCP
          resources:
            requests:
              memory: "200Mi"
              cpu: "200m"
            limits:
              memory: "300Mi"
              cpu: "400m"
---
apiVersion: v1
kind: Service
metadata:
  name: websvc   #service name (it can be any name)
  namespace: devproject
spec:
  ports:
    - name: apache
      port: 80 #service port
      targetPort: 8080 #container port
      protocol: TCP
  selector:     #mapping to pod
    apptype: web
    env: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webingress
  namespace: devproject
spec:
  ingressClassName: nginx
  rules:
    - host: "www.sknd.online"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: websvc
                port:
                  number: 80
